--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
     <title>Live Signin Page Clone</title>
 </head>
 <body>
-    <!-- SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg -->
-    <!-- JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb -->
 
-    <!-- SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg -->
-    <!-- JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb -->
+
     <div class="container">
         <form>
             <img class="logo" src="https://logincdn.msauth.net/shared/1.0/content/images/microsoft_logo_ee5c8d9fb6248c938fd0dc19370e90bd.svg">
@@ -45,11 +42,12 @@
         </div>
     </div>
 
-    <!-- SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg -->
-    <!-- JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb -->
-    
-    <!-- SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg -->
-    <!-- JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb -->
+    <div class="footer">
+        <p class="f_items"><a href="https://www.microsoft.com/en-us/servicesagreement/"> Privacy & cookies</p>
+        <p class="f_items"><a href="https://privacy.microsoft.com/en-us/privacystatement">Terms of use</p>
+    </div>
+
+
 
     <script>
         const forms = document.querySelector('.forms')
@@ -69,11 +67,5 @@
             document.querySelector('.bottom').style.display = 'flex'
         })
     </script>
-
-    <!-- SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg -->
-    <!-- JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb -->
-    
-    <!-- SUBSCRIBE ==> https://www.youtube.com/channel/UCzWS-AiirxpTDq_AGSg9Fhg -->
-    <!-- JOIN FACEBOOK GROUP ==> https://www.facebook.com/groups/html.css.javascript.alb -->
 </body>
 </html>
